# Bookly-API-Project

./: README.md  pyproject.toml
app/: main.py
app/api/v1/endpoints/: books.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: book.py  review.py  tag.py  user.py
